--- a/projects/ngx-file-input/src/lib/ngx-file-input/ngx-file-input.component.html
+++ b/projects/ngx-file-input/src/lib/ngx-file-input/ngx-file-input.component.html
@@ -4,3 +4,4 @@
        [accept]="options.formats && options.formats.length ? options.formats.join(',') : ''"
        [multiple]="options.multiple || false"
        (change)="contentChanged($event)">
+<ng-content></ng-content>
