Added minor fix for value reset.

--- a/projects/ngx-file-input/src/lib/ngx-file-input/ngx-file-input.component.html
+++ b/projects/ngx-file-input/src/lib/ngx-file-input/ngx-file-input.component.html
@@ -1,4 +1,4 @@
-<input type="file"
+<input #fileInput type="file"
        [id]="id || ''"
        [ngClass]="options.classes || ''"
        [accept]="options.formats && options.formats.length ? options.formats.join(',') : ''"
